# stormlog

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST.md  STYLE_GUIDE.md  pyproject.toml  requirements-ci-lint.in  requirements-ci-lint.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  stomrlog_plan.md  stormlog_plan.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  architecture.md  article.md  benchmark_harness.md  cli.md  compatibility_matrix.md  conf.py  cpu_compatibility.md  examples.md  gpu_setup.md  index.md  installation.md  pytorch_testing_guide.md  telemetry_schema.md  tensorflow_testing_guide.md  testing.md  troubleshooting.md  tui.md  usage.md
docs/examples/test_guides/: README.md
docs/reference/: api.rst
docs/schemas/: telemetry_event_v2.schema.json
examples/advanced/: tracking_demo.py
examples/basic/: pytorch_demo.py  tensorflow_demo.py
examples/cli/: benchmark_harness.py  capability_matrix.py  quickstart.py
examples/common/: capability_matrix_utils.py  cli.py  device.py  tf_workflow.py  torch_workflow.py
examples/scenarios/: __init__.py  cpu_telemetry_scenario.py  mps_telemetry_scenario.py  oom_flight_recorder_scenario.py  tf_end_to_end_scenario.py
examples/test_guides/: README.md
gpumemprof/: __init__.py  analyzer.py  cli.py  collective_attribution.py  cpu_profiler.py  device_collectors.py  diagnose.py  distributed_analysis.py  profiler.py  telemetry.py  tracker.py  utils.py  visualizer.py
gpumemprof/tui/: __init__.py  app.py  builders.py  commands.py  distributed_diagnostics.py  monitor.py  profiles.py  styles.py
gpumemprof/tui/widgets/: tables.py  timeline.py
stormlog/: __init__.py  analyzer.py  cli.py  context_profiler.py  cpu_profiler.py  device_collectors.py  diagnose.py  gap_analysis.py  oom_flight_recorder.py  profiler.py  telemetry.py  tracker.py  utils.py  visualizer.py
stormlog/tensorflow/: __init__.py  analyzer.py  cli.py  context_profiler.py  diagnose.py  profiler.py  tf_env.py  tracker.py  utils.py  visualizer.py
stormlog/tui/: __main__.py  app.py  builders.py  distributed_diagnostics.py  monitor.py  profiles.py  styles.py  workloads.py
stormlog/tui/widgets/: __init__.py  panels.py  welcome.py
tests/: gap_test_helpers.py  test_capability_matrix.py  test_cli_analyze.py  test_cli_diagnose.py  test_cli_info.py  test_cli_oom_flight_recorder.py  test_collective_attribution.py  test_core_profiler.py  test_cpu_profiler.py  test_device_collectors.py  test_distributed_analysis.py  test_docs_regressions.py  test_examples_scenarios.py  test_gap_analysis.py  test_import_hardening.py  test_oom_flight_recorder.py  test_packaging_contracts.py  test_profiler.py  test_profiler_regressions.py  test_telemetry_v2.py  test_tf_env.py  test_tf_gap_analysis.py  test_tf_runtime_regressions.py  test_tf_telemetry_export.py  test_tfmemprof_diagnose.py  test_tracker_input_guards.py  test_utils.py  test_visualizer_cross_rank.py
tests/e2e/: test_tui_pty.py
tests/tui/: test_app_helpers.py  test_app_pilot.py  test_app_snapshots.py  test_distributed_diagnostics.py  test_monitor.py  test_workloads.py
tfmemprof/: __init__.py  analyzer.py  cli.py  context_profiler.py  diagnose.py  profiler.py  tracker.py  visualizer.py
